Style : Update styling on receipt
Update styling on receipt :
- update font size address
- update payment method to right

--- a/resources/css/front/checkout_finish.css
+++ b/resources/css/front/checkout_finish.css
@@ -177,7 +177,7 @@
     }
 
     .receipt-address {
-        font-size: 9pt;
+        font-size: 0.7em;
         margin: 0 0 8px 0;
         text-align: center;
         line-height: 1.3;
@@ -306,7 +306,7 @@
         font-size: 10pt;
         font-weight: bold;
         margin: 10px 0;
-        text-align: left;
+        text-align: right;
     }
 
     /* Thank You */
