--- a/resources/css/front/beli_ticket.css
+++ b/resources/css/front/beli_ticket.css
@@ -38,8 +38,9 @@
     display: block;
     font-weight: 500;
     margin-bottom: 8px;
-    font-size: 16px;
+    font-size: 1.5em;
     color: #222;
+    font-weight: bold;
 }
 
 .form-group input {
