--- a/resources/css/front/input-package.css
+++ b/resources/css/front/input-package.css
@@ -39,7 +39,8 @@
     display: block;
     font-weight: 500;
     margin-bottom: 8px;
-    font-size: 16px;
+    font-size: 1.5em;
+    font-weight: bold;
     color: #222;
 }
 
