--- a/resources/css/front/checkout_finish.css
+++ b/resources/css/front/checkout_finish.css
@@ -113,9 +113,6 @@
     }
 }
 
-/* ============================= */
-/* Print Thermal / Struk (Updated)
-/* ============================= */
 @media print {
     body {
         background: #fff !important;
@@ -197,7 +194,7 @@
     }
 
     .invoice-text {
-        font-size: 10pt;
+        font-size: 0.7em;
         font-weight: bold;
         margin: 0 0 8px 0;
         text-align: center;
@@ -232,7 +229,7 @@
     .info-row {
         display: flex !important;
         margin: 3px 0;
-        font-size: 10pt;
+        font-size: 0.7em;
         line-height: 1.4;
     }
 
@@ -259,7 +256,7 @@
         display: flex !important;
         justify-content: space-between !important;
         align-items: flex-start !important;
-        font-size: 10pt;
+        font-size: 0.7em;
         margin: 4px 0;
         line-height: 1.3;
     }
@@ -283,14 +280,14 @@
         display: flex !important;
         justify-content: space-between !important;
         align-items: center !important;
-        font-size: 10pt;
+        font-size: 0.7em;
         margin: 5px 0;
         line-height: 1.4;
     }
 
     .receipt-total {
         font-weight: bold;
-        font-size: 11pt;
+        font-size: 1em;
         border-top: 1px solid #000;
         border-bottom: 1px solid #000;
         padding: 4px 0;
@@ -303,7 +300,7 @@
 
     /* Payment Method */
     .payment-method {
-        font-size: 10pt;
+        font-size: 0.7em;
         font-weight: bold;
         margin: 10px 0;
         text-align: right;
@@ -312,9 +309,10 @@
     /* Thank You */
     .thank-you {
         text-align: center;
-        font-size: 11pt;
+        font-size: 1em;
         font-weight: bold;
         margin: 12px 0 0 0;
+        margin-bottom: 10px !important;
     }
 
     /* === Fix whitespace bawah === */
@@ -333,3 +331,4 @@
         background: #fff;
     }
 }
+
