Style : Update view main blade for payment selection & admin button
Update view main blade for payment selection & admin button

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -330,6 +330,11 @@ body::before {
     align-items: start;
 }
 
+.admin-wrapper {
+    justify-self: end; /* Geser ke pojok kanan grid */
+}
+
+
 /* Payment Section - Left Side */
 .payment-section {
     display: flex;
